# fast-code-embed

./: .gitignore  CHANGELOG.md  CONFIGURABLE-QUERY-MODES.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  OVERVIEW-AND-ARCHITECTURE.md  README.md  SECURITY.md  bench_c.c  bench_mem_query.c  index_dir.c
.github/workflows/: python-release.yml  release.yml  test.yml  validate-release.yml
docs/: COMPARISON-VS-POTION-BASE-8M.md  CONFIGURABLE-QUERY-MODES.md  OVERVIEW-AND-ARCHITECTURE.md
examples/: loadquery.c
fuzz/: fuzz_corpus_load.c  gen_seed.c
java/: README.md  build.sh  pom.xml
java/src/main/java/com/github/nilsonsfj/fastcodeembed/: Corpus.java  FastCodeEmbed.java  FuncDescriptor.java  NativeLibrary.java  SearchResult.java
java/src/main/java/io/github/nilsonsfj/fastcodeembed/: Corpus.java  FastCodeEmbed.java  FuncDescriptor.java  NativeLibrary.java  SearchResult.java
java/src/main/native/: fast_code_embed_jni.c
java/src/test/java/com/github/nilsonsfj/fastcodeembed/: BenchJava.java  BenchMemQuery.java  FastCodeEmbedTest.java  IndexDir.java
java/src/test/java/io/github/nilsonsfj/fastcodeembed/: BenchJava.java  BenchMemQuery.java  FastCodeEmbedTest.java  IndexDir.java
python/: .gitignore  README.md  bench.py  pyproject.toml  setup.py
python/fast_code_embed/: __init__.py  _build.py
scripts/: bump_version.sh  check_version.sh  compute_pca_matrix.py  extract_nomic_vectors.py  extract_nomic_vectors_nf4.py
src/: version.c  version.h
src/embed/: code_tokens.h  code_vectors.h  code_vectors_blob.S  pca_projection.h
src/foundation/: compat.h  compat_thread.c  compat_thread.h  constants.h  hash_table.c  hash_table.h  log.c  log.h  platform.c  platform.h  profile.c  profile.h  simd_dot768.h  system_info.c
src/pipeline/: worker_pool.c  worker_pool.h
src/semantic/: semantic.c  semantic.h
src/xxhash/: xxhash.c  xxhash.h
tests/: smoke_windows.c  test_semantic.c
tools/: bench_c.c  index_dir.c
